--- a/src/resources/styles/default-style.css
+++ b/src/resources/styles/default-style.css
@@ -8,6 +8,9 @@
     -fx-text-color: rgb(67.0, 72.0, 77.0);
     -fx-light-gray-color: rgb(200.0, 200.0, 200.0);
     -fx-lightest-gray-color: rgb(230.0, 230.0, 230.0);
+    -fx-background-color:Wheat;  
+    -fx-alignment:center;  
+    -fx-background-radius: 100;  
 }
 
 .text {
@@ -23,6 +26,7 @@
     -fx-background-color: -fx-lightest-color;
     -fx-background-radius: 2px;
     -fx-font-size: 14px;
+    -fx-effect:dropshadow(one-pass-box,black,8,0.0,2,0);  
 }
 
 .button .text{
