--- a/src/resources/styles/style.css
+++ b/src/resources/styles/style.css
@@ -17,7 +17,6 @@
 .title {  
     -fx-font:bold 20pt "Verdana";   
     -fx-effect:dropshadow(one-pass-box,GREEN,8,0.0,2,0);  
-
 }  
 #smalltext {
     -fx-font: 100px Tahoma;
@@ -25,11 +24,21 @@
     -fx-stroke-width: 1;
 }
 #fancytext {
-    -fx-font: 100px Tahoma;
+    -fx-font: 100px FontAwesome;
     -fx-fill: linear-gradient(from 0% 0% to 100% 200%, repeat, aqua 0%, red 50%);
     -fx-stroke: navy;
     -fx-stroke-width: 1;
 }
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('fontawesome-webfont.ttf');
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('Roboto-Regular.ttf');
+}
+
 /*
 
 .scroll-pane {
